# gr-cyberradio

./: .gitignore  README  README.md  gr-cyberradio.spec  make_all_debs  makedeb  makedebpy3  makerpm
gr-CyberRadio/: CMakeLists.txt  MANIFEST.md  gr-cyberradio.spec  version.txt
gr-CyberRadio/apps/: CMakeLists.txt  configureRadioDataPorts  ndrGuiLauncher-kde.desktop  ndrGuiLauncher.desktop
gr-CyberRadio/debian/: changelog  control  postinst  postrm  rules
gr-CyberRadio/docs/: CMakeLists.txt  README.CyberRadio
gr-CyberRadio/etc/: CMakeLists.txt
gr-CyberRadio/examples/: CMakeLists.txt  SyncReceive.grc  continuous_fft_demo.grc  continuous_fft_demo.py  cyberradio.qss  frq_strobe_test.grc  frq_strobe_test.py  local_ddc_source.grc  local_gr_cyberradio_wola_fft.grc  ndr301_dual_wideband.grc  ndr301_example.grc  ndr651_single_trx.grc  ndr651_single_trx.py  ndr651_txrx_gui.grc  ndr651_txrx_gui.py  ndr804_display.grc  ndr804_display.py  ndrGuiLauncher  ndrGuiLauncher.wxg  ndr_app_template.grc  ndr_click2tune_test.grc  ndr_click2tune_test.py  ndr_qt_demo_gui.grc  ndr_qt_demo_gui.py  query_tx_parm.py  simple_spectral_display.grc  simple_spectral_display.py  testRadioConnection  test_0copy_keemMinN_3channel.py  test_0copy_keepMinN.grc  test_0copy_keepMinN_3channel.grc  test_radio_object.grc  test_radio_object.py
gr-CyberRadio/grc/: CMakeLists.txt  CyberRadio_NDR304_coherent_control.block.yml  CyberRadio_NDR304_coherent_control.xml  CyberRadio_NDR304_source.block.yml  CyberRadio_NDR304_source.xml  CyberRadio_NDR308_source.block.yml  CyberRadio_NDR308_source.xml  CyberRadio_NDR470_source.block.yml  CyberRadio_NDR470_source.xml  CyberRadio_NDR472_source.block.yml  CyberRadio_NDR472_source.xml  CyberRadio_NDR551_source.block.yml  CyberRadio_NDR551_source.xml  CyberRadio_NDR651_duc_sink_mk2.block.yml  CyberRadio_NDR651_duc_sink_mk2.xml  CyberRadio_NDR651_source.block.yml  CyberRadio_NDR651_source.xml  CyberRadio_NDR651_sync_sink.block.yml  CyberRadio_NDR651_sync_sink.xml  CyberRadio_NDR_demo_control.block.yml  CyberRadio_NDR_demo_control.xml  CyberRadio_convert_dbfs_dbm.xml  CyberRadio_freq_msg_converter.block.yml  CyberRadio_freq_msg_converter.xml  CyberRadio_freq_msg_strobe.block.yml  CyberRadio_freq_msg_strobe.xml  CyberRadio_generic_ddc_control_block.block.yml  CyberRadio_generic_ddc_control_block.xml  CyberRadio_generic_group_control_block.block.yml  CyberRadio_generic_group_control_block.xml  CyberRadio_generic_ndr_command_block.block.yml  CyberRadio_generic_ndr_command_block.xml  CyberRadio_generic_radio_control_block.block.yml  CyberRadio_generic_radio_control_block.xml  CyberRadio_generic_radio_interface.block.yml  CyberRadio_generic_radio_interface_block.yml  CyberRadio_generic_tuner_control_block.block.yml  CyberRadio_generic_tuner_control_block.xml  CyberRadio_log_mag_fft.block.yml  CyberRadio_log_mag_fft.xml  (+58 more)
gr-CyberRadio/lib/: CMakeLists.txt  NDR651_duc_sink_mk2_impl.cc  NDR651_duc_sink_mk2_impl.h  NDR651_sync_sink_impl.cc  NDR651_sync_sink_impl.h  convert_dbfs_dbm_impl.cc  convert_dbfs_dbm_impl.h  mux_impl.cc  mux_impl.h  ndr651_sink_impl.cc  ndr651_sink_impl.h  packet_types.h  qa_CyberRadio.cc  single_pole_iir_filter_ff_impl.cc  single_pole_iir_filter_ff_impl.h  snapshot_fft_vector_source_impl.cc  snapshot_fft_vector_source_impl.h  snapshot_source_c_impl.cc  snapshot_source_c_impl.h  snapshot_vector_source_impl.cc  snapshot_vector_source_impl.h  snapshot_vector_source_mk2_impl.cc  snapshot_vector_source_mk2_impl.h  test_CyberRadio.cc  vector_keep_m_in_n_impl.cc  vector_keep_m_in_n_impl.h  vector_mag_squared_log10_cf_impl.cc  vector_mag_squared_log10_cf_impl.h  vector_nlog10_ff_impl.cc  vector_nlog10_ff_impl.h  vita_iq_source_2_impl.cc  vita_iq_source_2_impl.h  vita_iq_source_impl.cc  vita_iq_source_impl.h  vita_iq_source_mk3_impl.cc  vita_iq_source_mk3_impl.h  vita_multifile_iq_source_impl.cc  vita_multifile_iq_source_impl.h  vita_rx_impl.cc  vita_rx_impl.h  (+2 more)
gr-CyberRadio/python/: CMakeLists.txt  NDR304_coherent_control.py  NDR304_source.py  NDR308_source.py  NDR470_source.py  NDR472_source.py  NDR551_source.py  NDR651_source.py  NDR_demo_control.py  __init__.py  file_like_object_source.py  freq_msg_converter.py  freq_msg_strobe.py  generic_ddc_control_block.py  generic_group_control_block.py  generic_ndr_command_block.py  generic_radio_control_block.py  generic_radio_interface_block.py  generic_tuner_control_block.py  log_mag_fft.py  ndr804ptt_narrowband_source.py  ndr804ptt_snapshot_fft_source.py  ndr804ptt_wideband_spectral_source.py  ndr_control.py  py_msg_strobe.py  py_peak_hold.py  qa_freq_msg_converter.py  qa_freq_msg_strobe.py  qa_generic_radio_control_block.py  qa_log_mag_fft.py  qa_ndr651_sink.py  qa_py_peak_hold.py  qa_single_pole_iir_filter_ff.py  qa_vector_mag_squared_log10_cf.py  qa_wola_log_mag_fft.py  qt_freq_time_sink_iq.py  qt_freq_time_sink_real.py  safe_audio_sink.py  sinad_calc_block.py  wola_log_mag_fft.py
gr-CyberRadio/swig/: CMakeLists.txt  CyberRadio_swig.i
gr-cyberradio/: .cproject  .project  CMakeLists.txt  README
gr-cyberradio/debian/: control  postinst  rules
gr-cyberradio/docs/: CMakeLists.txt  README.CyberRadio  gr-cyberradio-docs.desktop
gr-cyberradio/examples/: CMakeLists.txt  CyberRadio_NDR304.grc  CyberRadio_NDR304.py  CyberRadio_NDR308_source.grc  CyberRadio_NDR308_source.py  CyberRadio_NDR651_sink.grc  CyberRadio_NDR651_sink.py  CyberRadio_NDR651_source.grc  CyberRadio_NDR651_source.py
gr-cyberradio/grc/: CMakeLists.txt  CyberRadio_NDR304_source.xml  CyberRadio_NDR308_source.xml  CyberRadio_NDR651_duc_sink.xml  CyberRadio_NDR651_duc_sink_mk2.xml  CyberRadio_NDR651_sink.xml  CyberRadio_NDR651_source.xml  CyberRadio_NDR_driver_interface.xml  CyberRadio_class_method_probe.xml  CyberRadio_file_like_object_source.xml  (+3 more)
libcyberradio/: .autotools  .cproject  .project  AUTHORS  CMakeLists.txt  LibCyberRadioConfig.cmake.in  LibCyberRadioConfigVersion.cmake.in  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  configure  configure.ac  libcyberradio.doxyfile  libcyberradio.doxyfile.bak  libcyberradio.spec  notes.txt  version.txt
(+412 files in other folders)
